--- a/index.html
+++ b/index.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <title>PMMT</title>
         <link rel="stylesheet" href="index.css">
     </head>
+
     <body>
-        <main>
-            <div class="container">
-                <form class="form form_hidden" id="login">
-                    <div>
-                        <h1 class="form_title" id="login">Login</h1>
-                    </div>
-                    <div class="form_message form_message-error"></div>
-                    <div class="form_input-group">
-                        <input type="text" class="form_input" autofocus placeholder="Username or email"></input>
-                        <div class="form_input-error-message"></div>
-                    </div>
-                    <div class="form_input-group">
-                        <input type="password" class="form_input" autofocus placeholder="Password" ></input>
-                        <div class="form_input-error-message">
-                    </div>
-                    <button class="form_button" type="submit">Continue</button>
-                    <p class="form_text">
-                        <a href="#" class="form_link">Forgot your passsord?</a>
-                    </p>
-                    <p class="form_text">
-                        <a class="form_link" href="./" id="linkCreatesAccount">Dont have an account? Creat account</a>
-                    </p>
-                </form>
-            </div>
-        </main>
+         <div class="container">
+            <form class="form1" id="login">
+                <div>
+                    <h1 class="form_title" id="login">Login</h1>
+                </div>
+                <div class="form_message form_message-error"></div>
+                <div class="form_input-group">
+                    <input type="text" class="form_input" autofocus placeholder="Username or email"></input>
+                    <div class="form_input-error-message"></div>
+                </div>
+                <div class="form_input-group">
+                <input type="password" class="form_input" autofocus placeholder="Password"></input>
+                <div class="form_input-error-message"></div>
+                <button class="form_button" type="submit">Continue</button>
+                <p class="form_text">
+                    <a href="#" class="form_link">Forgot your passsord?</a>
+                </p>
+                <p class="form_text">
+                    <a class="form_link" href="./" id="linkCreateAccount" onclick="forms(2)">Dont have an account? Create account</a>
+                </p>
+            </form>
+
+            <form class="form2" id="createAccount">
+                <div>
+                    <h1 class="form_title">Create Account</h1>
+                </div>
+                <div class="form_message form_message-error"></div>
+                <div class="form_input-group">
+                    <input type="text" class="form_input" autofocus placeholder="Username"></input>
+                    <div class="form_input-error-message"></div>
+                </div>
+                <div class="form_input-group">
+                    <input type="text" class="form_input" autofocus placeholder="Email Adress"></input>
+                    <div class="form_input-error-message"></div>
+                </div>
+                <div class="form_input-group">
+                    <input type="password" class="form_input" autofocus placeholder="Password"></input>
+                    <div class="form_input-error-message"></div>
+                <div class="form_input-group">
+                <input type="password" class="form_input" autofocus placeholder="Confirm Password"></input>
+                    <div class="form_input-error-message"></div>
+                <button class="form_button" type="submit">Continue</button>
+                <p class="form_text">
+                    <a class="form_link" href="./" id="linkLogin" onclick="forms(1)">Already have an account? Sign in</a>
+                </p>
+            </form>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
